--- a/index.html
+++ b/index.html
@@ -141,7 +141,155 @@
             <div class="wrap-systems">
                 <div class="system">
                     <div class="container">
-                        <div class="row d-flex justify-content-center align-items-center">
+                        <div class="system-carousel">
+                            <div id="carouselExampleCaptions" class="carousel carousel-fade slide" data-ride="carousel">
+                                <!--<ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                </ol>-->
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <div class="row d-flex justify-content-center align-items-center">
+                                            <div class="col-12 col-md-6">
+                                                <div class="system-box-text fadeIn">
+                                                    <h2 class="system-title">سامانه های تحلیل و پردازش محتوا</h2>
+                                                    <p class="system-explain">بازشناسی چهره افراد</p>
+                                                    <p class="system-explain">تشخیص جنسیت از روی چهره افراد</p>
+                                                    <p class="system-explain">بازشناسی اشیا در تصاویر و ویدیو</p>
+                                                    <p class="system-explain">ردگیری افراد و اشیا در ویدیو</p>
+                                                    <p class="system-explain">قابلیت تحلیل ویدیو به صورت آنلاین و آفلاین</p>
+                                                    <p class="system-explain">تشخیص حالت احساس از روی چهره افراد</p>
+                                                    <p class="system-explain">تشخیص دهنده کلمات غیر مفهومی</p>
+                                                    <p class="system-explain">تشخیص کسره اضافه</p>
+                                                    <p class="system-explain">برچسب زن اجزای کلام</p>
+                                                    <p class="system-explain">استخراج عبارات اسمی</p>
+
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-md-6">
+                                                <div class="box-circle">
+                                                    <div class="circle-image system_1">
+                                                        <img src="assets/img/system4.png" alt="" class="flipInY">
+
+                                                    </div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="0" class="system-btn system_1 active"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="1" class="system-btn system_2"> <img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="2" class="system-btn system_3"> <img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="3" class="system-btn system_4"> <img src="assets/img/icon-chehre.png" alt=""></div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="row d-flex justify-content-center align-items-center">
+                                            <div class="col-12 col-md-6">
+                                                <div class="system-box-text fadeIn">
+                                                    <h2 class="system-title">سامانه های موبایلی</h2>
+                                                    <p class="system-explain">بازشناسی موبایل افراد</p>
+                                                    <p class="system-explain">لوکیشن موبایل</p>
+                                                    <p class="system-explain">بازشناسی تصاویر در موبایل</p>
+                                                    <p class="system-explain">ردگیری افراد و اشیا در موبایل</p>
+                                                    <p class="system-explain">قابلیت هک</p>
+                                                    <p class="system-explain">تشخیص حالت موبایل</p>
+                                                    <p class="system-explain">تشخیص دهنده نوع موبایل</p>
+
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-md-6">
+                                                <div class="box-circle">
+                                                    <div class="circle-image system_2">
+                                                        <img src="assets/img/system2.png" alt="" class="flipInX">
+
+                                                    </div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="0" class="system-btn system_1"> <img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="1" class="system-btn system_2  active"> <img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="2" class="system-btn system_3"> <img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="3" class="system-btn system_4"> <img src="assets/img/icon-chehre.png" alt=""></div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="row d-flex justify-content-center align-items-center">
+                                            <div class="col-12 col-md-6">
+                                                <div class="system-box-text fadeIn">
+                                                    <h2 class="system-title">پکیج های شرکت</h2>
+                                                    <p class="system-explain">بازشناسی شرکت</p>
+                                                    <p class="system-explain">تشخیص شرکتد</p>
+                                                    <p class="system-explain">بازشناسی شرکت در تصاویر و ویدیو</p>
+                                                    <p class="system-explain">ردگیری شرکت در اشیا در ویدیو</p>
+                                                    <p class="system-explain">قابلیت تحلیل ویدیوشرکت در</p>
+                                                    <p class="system-explain">تشخیص حالت شرکت دراز روی چهره افراد</p>
+                                                    <p class="system-explain">تشخیص دهنده شرکت درغیر مفهومی</p>
+                                                    <p class="system-explain">تشخیص شرکت در اضافه</p>
+                                                    <p class="system-explain">برچسب شرکت در اجزای کلام</p>
+                                                    <p class="system-explain">استخراج عشرکت در اسمی</p>
+
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-md-6">
+                                                <div class="box-circle">
+                                                    <div class="circle-image system_3">
+                                                        <img src="assets/img/system4.png" alt="" class="flipInY">
+
+                                                    </div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="0" class="system-btn system_1"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="1" class="system-btn system_2"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="2" class="system-btn system_3  active"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="3" class="system-btn system_4"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <div class="row d-flex justify-content-center align-items-center">
+                                            <div class="col-12 col-md-6">
+                                                <div class="system-box-text fadeIn">
+                                                    <h2 class="system-title">نگهدارنده های انتخابی</h2>
+                                                    <p class="system-explain">بررسی کوتاه مدت</p>
+                                                    <p class="system-explain">تشخیص جنسیت از روی چهره افراد</p>
+                                                    <p class="system-explain">تشخیص و نگهداری از انتخاب های اولیه</p>
+                                                    <p class="system-explain">ردگیری افراد و اشیا در ویدیو</p>
+                                                    <p class="system-explain">قابلیت تحلیل ویدیو به صورت آنلاین و آفلاین</p>
+                                                    <p class="system-explain">تشخیص حالت احساس از روی چهره افراد</p>
+                                                    <p class="system-explain">تشخیص دهنده کلمات غیر مفهومی</p>
+                                                    <p class="system-explain">تشخیص کسره اضافه</p>
+                                                    <p class="system-explain">برچسب زن اجزای کلام</p>
+                                                    <p class="system-explain">استخراج عبارات اسمی</p>
+
+                                                </div>
+                                            </div>
+                                            <div class="col-12 col-md-6">
+                                                <div class="box-circle">
+                                                    <div class="circle-image system_4">
+                                                        <img src="assets/img/system4.png" alt="" class="flipInX">
+
+                                                    </div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="0" class="system-btn system_1"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="1" class="system-btn system_2"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="2" class="system-btn system_3"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                    <div data-target="#carouselExampleCaptions" data-slide-to="4" class="system-btn system_4  active"><img src="assets/img/icon-chehre.png" alt=""></div>
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+                                </div>
+                              <!--  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>-->
+                            </div>
+                        </div>
+                        <!--<div class="row d-flex justify-content-center align-items-center">
                             <div class="col-12 col-md-6">
                                 <div class="system-box-text show-box" id="box_text_system_1">
                                     <h2 class="system-title">سامانه های تحلیل و پردازش محتوا</h2>
@@ -212,15 +360,23 @@
                                 </div>
                             </div>
 
-                        </div>
+                        </div>-->
                     </div>
 
                 </div>
                 <div class="system-shape-right">
                     <img src="assets/img/right.svg" alt="">
                 </div>
-                <div class="system-shape-left"></div>
-
+                <div class="system-shape-left">
+                    <img src="assets/img/ghab.svg" alt="">
+                </div>
+                <div class="system-Square">
+                </div>
+                <div class="system-Square2">
+                </div>
+                <div class="system-octagonal">
+                    <img src="assets/img/shape_5.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -291,7 +447,7 @@
                                     <span class="email-text">info@ammmoj.com</span>
                                 </div>
                                 <p class="connection-connect-telegram">ارتباط از طریق تلگرام:</p>
-                                <div class="connection-telegram"><a href="#"><i class="fa fa-telegram"></i></a></div>
+                                <div class="connection-telegram"><a href="#"><img src="assets/img/telegram.png" alt="" class="icon-telegram"></a></div>
                             </div>
                         </div>
                         <div class="col-12 col-lg-7"></div>
