background for activities

--- a/index.html
+++ b/index.html
@@ -84,39 +84,7 @@
                     <img src="assets/img/shape_3.svg" alt="">
                 </div>
                 <div class="Hexagons">
-                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 381 330">
-                        <defs>
-                            <style>.cls-1 {
-                                fill: transparent;
-                            }
-
-                            .cls-2 {
-                                fill: #bf00bf;
-                            }</style>
-                        </defs>
-                        <title>shape_2</title>
-                        <g id="Polygon_14" data-name="Polygon 14">
-                            <path class="cls-1" d="M316.7,26.5l95.3,165-95.3,165H126.2L31,191.5l95.3-165Z"
-                                  transform="translate(-31 -26.5)"/>
-                            <path class="cls-2"
-                                  d="M128,29.5l-93.5,162,93.5,162H315l93.5-162L315,29.5H128m-1.8-3H316.7l95.3,165-95.3,165H126.2L31,191.5Z"
-                                  transform="translate(-31 -26.5)"/>
-                        </g>
-                        <g id="Polygon_15" data-name="Polygon 15">
-                            <path class="cls-1" d="M306.7,44.5l85.3,147-85.3,147H136.2L51,191.5l85.3-147Z"
-                                  transform="translate(-31 -26.5)"/>
-                            <path class="cls-2"
-                                  d="M138,47.5l-83.5,144,83.5,144H305l83.5-144L305,47.5H138m-1.8-3H306.7l85.3,147-85.3,147H136.2L51,191.5Z"
-                                  transform="translate(-31 -26.5)"/>
-                        </g>
-                        <g id="Polygon_16" data-name="Polygon 16">
-                            <path class="cls-1" d="M295.2,63.5l73.8,128-73.8,128H147.7L74,191.5l73.8-128Z"
-                                  transform="translate(-31 -26.5)"/>
-                            <path class="cls-2"
-                                  d="M149.5,66.5l-72,125,72,125h144l72-125-72-125h-144m-1.8-3H295.2l73.8,128-73.8,128H147.7L74,191.5Z"
-                                  transform="translate(-31 -26.5)"/>
-                        </g>
-                    </svg>
+                    <img src="assets/img/octangel.svg" alt="">
                 </div>
 
                 <div class="home-background">
@@ -143,11 +111,6 @@
                     <div class="container">
                         <div class="system-carousel">
                             <div id="carouselExampleCaptions" class="carousel carousel-fade slide" data-ride="carousel">
-                                <!--<ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-                                </ol>-->
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <div class="row d-flex justify-content-center align-items-center">
@@ -279,88 +242,9 @@
                                         </div>
                                     </div>
                                 </div>
-                              <!--  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Previous</span>
-                                </a>
-                                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="sr-only">Next</span>
-                                </a>-->
                             </div>
                         </div>
-                        <!--<div class="row d-flex justify-content-center align-items-center">
-                            <div class="col-12 col-md-6">
-                                <div class="system-box-text show-box" id="box_text_system_1">
-                                    <h2 class="system-title">سامانه های تحلیل و پردازش محتوا</h2>
-                                    <p class="system-explain">بازشناسی چهره افراد</p>
-                                    <p class="system-explain">تشخیص جنسیت از روی چهره افراد</p>
-                                    <p class="system-explain">بازشناسی اشیا در تصاویر و ویدیو</p>
-                                    <p class="system-explain">ردگیری افراد و اشیا در ویدیو</p>
-                                    <p class="system-explain">قابلیت تحلیل ویدیو به صورت آنلاین و آفلاین</p>
-                                    <p class="system-explain">تشخیص حالت احساس از روی چهره افراد</p>
-                                    <p class="system-explain">تشخیص دهنده کلمات غیر مفهومی</p>
-                                    <p class="system-explain">تشخیص کسره اضافه</p>
-                                    <p class="system-explain">برچسب زن اجزای کلام</p>
-                                    <p class="system-explain">استخراج عبارات اسمی</p>
 
-                                </div>
-                                <div class="system-box-text" id="box_text_system_2">
-                                    <h2 class="system-title">موبایل تحلیلی</h2>
-                                    <p class="system-explain">موبایل1</p>
-                                    <p class="system-explain">تشخیص جنسیت از روی چهره افراد</p>
-                                    <p class="system-explain">بازشناسی اشیا در تصاویر و ویدیو</p>
-                                    <p class="system-explain">ردگیری افراد و اشیا در ویدیو</p>
-                                    <p class="system-explain">قابلیت تحلیل ویدیو به صورت آنلاین و آفلاین</p>
-                                    <p class="system-explain">تشخیص حالت احساس از روی چهره افراد</p>
-                                    <p class="system-explain">تشخیص دهنده کلمات غیر مفهومی</p>
-                                    <p class="system-explain">تشخیص کسره اضافه</p>
-                                    <p class="system-explain">برچسب زن اجزای کلام</p>
-                                    <p class="system-explain">استخراج عبارات اسمی</p>
-
-                                </div> <div class="system-box-text" id="box_text_system_3">
-                                <h2 class="system-title">باکس سوم</h2>
-                                <p class="system-explain">متن باکس سوم</p>
-                                <p class="system-explain">تشخیص جنسیت از روی چهره افراد</p>
-                                <p class="system-explain">بازشناسی اشیا در تصاویر و ویدیو</p>
-                                <p class="system-explain">ردگیری افراد و اشیا در ویدیو</p>
-                                <p class="system-explain">قابلیت تحلیل ویدیو به صورت آنلاین و آفلاین</p>
-                                <p class="system-explain">تشخیص حالت احساس از روی چهره افراد</p>
-                                <p class="system-explain">تشخیص دهنده کلمات غیر مفهومی</p>
-                                <p class="system-explain">تشخیص کسره اضافه</p>
-                                <p class="system-explain">برچسب زن اجزای کلام</p>
-                                <p class="system-explain">استخراج عبارات اسمی</p>
-
-                            </div>
-                                <div class="system-box-text" id="box_text_system_4">
-                                    <h2 class="system-title">باکس چهارم</h2>
-                                    <p class="system-explain">متن باکس چهارم</p>
-                                    <p class="system-explain">تشخیص جنسیت از روی چهره افراد</p>
-                                    <p class="system-explain">بازشناسی اشیا در تصاویر و ویدیو</p>
-                                    <p class="system-explain">ردگیری افراد و اشیا در ویدیو</p>
-                                    <p class="system-explain">قابلیت تحلیل ویدیو به صورت آنلاین و آفلاین</p>
-                                    <p class="system-explain">تشخیص حالت احساس از روی چهره افراد</p>
-                                    <p class="system-explain">تشخیص دهنده کلمات غیر مفهومی</p>
-                                    <p class="system-explain">تشخیص کسره اضافه</p>
-                                    <p class="system-explain">برچسب زن اجزای کلام</p>
-                                    <p class="system-explain">استخراج عبارات اسمی</p>
-
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-6">
-                                <div class="box-circle">
-                                <div class="circle-image" id="circle_image">
-                                        <img src="assets/img/system1.jpg" alt="">
-
-                                </div>
-                                    <button class="system-btn" id="system_1">دکمه اول</button>
-                                    <button class="system-btn" id="system_2">دکمه دوم</button>
-                                    <button class="system-btn" id="system_3">دکمه سوم</button>
-                                    <button class="system-btn" id="system_4">دکمه چهارم</button>
-                                </div>
-                            </div>
-
-                        </div>-->
                     </div>
 
                 </div>
@@ -375,53 +259,65 @@
                 <div class="system-Square2">
                 </div>
                 <div class="system-octagonal">
-                    <img src="assets/img/shape_5.svg" alt="">
+                    <img src="assets/img/right_1.svg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="vertical-scrolling">
+        <div class="box-activities">
+
+            <div class="container wrap-activities">
+                <div class="activities">
+
+                </div>
+                <div class="background-activities">
+                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 2111.48 1102.98"><defs><style>.cls-1{fill:none;stroke:#e2e2e2;stroke-width:3px;}.cls-2{stroke:#c6c6c6;stroke-miterlimit:10;stroke-width:2px;fill:url(#linear-gradient);}</style><linearGradient id="linear-gradient" x1="1982.91" y1="318.22" x2="574.25" y2="1726.88" gradientTransform="translate(-19.08 24.32) rotate(-1.08)" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#404d8c"/><stop offset="1" stop-color="#191e48"/></linearGradient></defs><title>shape_4</title><rect class="cls-1" x="260.13" y="507.97" width="2064.09" height="983.37" rx="119.18" ry="119.18" transform="translate(-298.43 -362.43) rotate(-3.71)"/><rect class="cls-2" x="302.5" y="511.55" width="1952.17" height="1022" rx="118.16" ry="118.16" transform="translate(-216.9 -472.12) rotate(1.08)"/></svg>
                 </div>
             </div>
         </div>
     </section>
     <section class="vertical-scrolling">
-        <h2>#3</h2>
-        <h3>This is the third section</h3>
-    </section>
-    <section class="vertical-scrolling">
         <div class="box-slider">
-            <div id="demo" class="carousel slide" data-ride="carousel">
-                <ul class="carousel-indicators">
-                    <li data-target="#demo" data-slide-to="0" class="active"></li>
-                    <li data-target="#demo" data-slide-to="1"></li>
-                    <li data-target="#demo" data-slide-to="2"></li>
-                </ul>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
-                        <div class="carousel-caption">
-                            <h3>Los Angeles</h3>
-                            <p>We had such a great time in LA!</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
-                        <div class="carousel-caption">
-                            <h3>Chicago</h3>
-                            <p>Thank you, Chicago!</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="ny.jpg" alt="New York" width="1100" height="500">
-                        <div class="carousel-caption">
-                            <h3>New York</h3>
-                            <p>We love the Big Apple!</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                </a>
-                <a class="carousel-control-next" href="#demo" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                </a>
-            </div>
+     <div class="wrap-slider">
+         <div id="demo" class="carousel slide" data-ride="carousel">
+             <ul class="carousel-indicators">
+                 <li data-target="#demo" data-slide-to="0" class="active"></li>
+                 <li data-target="#demo" data-slide-to="1"></li>
+                 <li data-target="#demo" data-slide-to="2"></li>
+             </ul>
+             <div class="carousel-inner">
+                 <div class="carousel-item active">
+                     <img src="la.jpg" alt="Los Angeles" width="1100" height="500">
+                     <div class="carousel-caption">
+                         <h3>Los Angeles</h3>
+                         <p>We had such a great time in LA!</p>
+                     </div>
+                 </div>
+                 <div class="carousel-item">
+                     <img src="chicago.jpg" alt="Chicago" width="1100" height="500">
+                     <div class="carousel-caption">
+                         <h3>Chicago</h3>
+                         <p>Thank you, Chicago!</p>
+                     </div>
+                 </div>
+                 <div class="carousel-item">
+                     <img src="ny.jpg" alt="New York" width="1100" height="500">
+                     <div class="carousel-caption">
+                         <h3>New York</h3>
+                         <p>We love the Big Apple!</p>
+                     </div>
+                 </div>
+             </div>
+             <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                 <span class="carousel-control-prev-icon"></span>
+             </a>
+             <a class="carousel-control-next" href="#demo" data-slide="next">
+                 <span class="carousel-control-next-icon"></span>
+             </a>
+         </div>
+     </div>
         </div>
     </section>
     <section class="vertical-scrolling">
@@ -429,7 +325,7 @@
             <div class="row">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12 col-lg-5">
+                        <div class="col-12 col-lg-4">
                             <div class="connection-box">
                                 <h6 class="connection-title">تماس با ما</h6>
                                 <div class="connection-url">
@@ -447,17 +343,18 @@
                                     <span class="email-text">info@ammmoj.com</span>
                                 </div>
                                 <p class="connection-connect-telegram">ارتباط از طریق تلگرام:</p>
-                                <div class="connection-telegram"><a href="#"><img src="assets/img/telegram.png" alt="" class="icon-telegram"></a></div>
+                                <div class="connection-telegram"><a href="#"><img src="assets/img/telegram.svg" alt="" class="icon-telegram"></a></div>
                             </div>
                         </div>
-                        <div class="col-12 col-lg-7"></div>
+                        <div class="col-12 col-lg-8">
+                            <img src="assets/img/map_2.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 </div>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>-->
 <script src="assets/js/jquery-3.4.0.js"></script>
 <script src="assets/js/particles.min.js"></script>
 <script src="assets/js/app.js"></script>
