add arrow slider

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
 
 
                     <div class="wrap-back-button">
-                        <button class="back-button">x</button>
+                        <button class="back-button"><img src="assets/img/close-button.svg" alt=""></button>
                     </div>
                 </div>
                 <div class="activities-gallery activities-gallery-motahari hidden">
@@ -602,7 +602,7 @@
                         </div>
                     </div>
                     <div class="wrap-back-button">
-                        <button class="back-button">x</button>
+                        <button class="back-button"><img src="assets/img/close-button.svg" alt=""></button>
                     </div>
                 </div>
                 <div class="background-activities">
@@ -665,10 +665,10 @@
                         </div>
                     </div>
                     <a class="carousel-control-next" href="#demo" data-slide="next">
-                        <span class="carousel-control-prev-icon"></span>
+                        <span class="carousel-control-slider-next-icon" ></span>
                     </a>
                     <a class="carousel-control-prev" href="#demo" data-slide="prev" >
-                        <span class="carousel-control-next-icon"></span>
+                        <span class="carousel-control-slider-prev-icon"><img src="assets/img/next.svg" alt=""></span>
                     </a>
                 </div>
             </div>
